-
Bug
-
Resolution: Done
-
P2: Important
-
6.4.0 Beta3
-
None
-
-
3e95884081 (qt/qtbase/dev) 3e95884081 (qt/tqtc-qtbase/dev) bff012b53f (qt/qtbase/6.4) bff012b53f (qt/tqtc-qtbase/6.4) bff012b53f (qt/tqtc-qtbase/6.4.0) ff975be6b4 (qt/qtbase/6.3) ff975be6b4 (qt/tqtc-qtbase/6.3)
Steps to reproduce:
-Create an app with some modals (for example one when app start and one you can open when you want).
-Start the app, first modal should open.
Expected behavior at this point:
-Screen reader should announce modal title and first child getting focus
Actual behavior:
-Only modal title is announce.
Same occured when you open another modal
Tested with NVDA
- duplicates
-
QTBUG-101585 QMessageBox components get skipped by Windows Narrator
-
- Closed
-
For Gerrit Dashboard: QTBUG-105735 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
429624,2 | Windows QPA: send UIA focus notification after window activation | dev | qt/qtbase | Status: MERGED | +2 | 0 |
430406,2 | Windows QPA: send UIA focus notification after window activation | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |
430407,2 | Windows QPA: send UIA focus notification after window activation | 6.3 | qt/qtbase | Status: MERGED | +2 | 0 |
430409,2 | Windows QPA: send UIA focus notification after window activation | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: MERGED | +2 | 0 |
440824,3 | Revert "Accessibility: don't emit focus change when reason is window activation" | dev | qt/qtbase | Status: MERGED | +2 | 0 |
441577,2 | Revert "Accessibility: don't emit focus change when reason is window activation" | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |
441582,1 | Revert "Accessibility: don't emit focus change when reason is window activation" | tqtc/lts-6.2 | qt/tqtc-qtbase | Status: ABANDONED | 0 | 0 |