Windows QPA: send UIA focus notification after window activation

After a Qt application window was opened, and focus was moved to
another window, and then back to the Qt application window, NVDA
would only announce the window name, but not the widget focused
within the window. This patch makes Qt send a notification focus
for the focused widget after a window activation notification.

Fixes: QTBUG-105735
Change-Id: I3426b3613ae546de0ce363f9acc5d6776c99a8aa
Reviewed-by: Oliver Wolff <oliver.wolff@qt.io>
(cherry picked from commit 3e95884081727b84df265e2fa3456f2393e61f7b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>